[package]
name = "blog_os"
version = "0.1.0"
edition = "2024"

[package.metadata.bootimage]
test-args = [
  "-device",
  "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial",
  "stdio",
  "-display",
  "none"
]
test-timeout = 300  # (in seconds)
test-success-exit-code = 33  # (0x10 << 1) | 1

[[bin]]
bench = false
name = "blog_os"
test = true

[[test]]
harness = false
name = "should_panic"

[dependencies]
bootloader = "0.9"
spin = "0.5.2"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.14.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# the profile used for `cargo build`
[profile.dev]
# panic = "abort"  # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
# panic = "abort"  # disable stack unwinding on panic
